# hoyo_calendar

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  nuxt.config.ts  package.json  pyproject.toml  requirements.txt
.edgeone/edge-functions/: index.js  meta.json
.github/workflows/: build.yaml  main.yml
app/: main.py
app/core/: factory.py  pipeline.py  scheduler.py  settings.py
app/crawler/: __init__.py  base_crawler.py  genshin_birthday.py  genshin_event.py  sr_birthday.py  sr_event.py  zzz_birthday.py  zzz_event.py
app/exporter/: __init__.py  base_exporter.py  ics_exporter.py  json_exporter.py
app/models/: birthday.py  calendar.py  event.py
app/services/: bili_wiki_helper.py  http_client.py
app/utils/: logger.py  push.py  string_utils.py
assets/img/: banner.avif  hoyo_calendar_00.avif  hoyo_calendar_01.avif
components/: Footer.vue
edge-functions/api/: [[default]].ts
fileio/: __init__.py
ics/: genshin.ics  sr.ics  zzz.ics  原神-七圣召唤.ics  原神-活动.ics  原神-祈愿.ics  原神.ics  星铁-活动.ics  星铁-跃迁.ics  星铁.ics  绝区零-前瞻特别节目.ics  绝区零-活动.ics  绝区零-调频.ics  绝区零.ics
layouts/: default.vue
pages/: index.vue
public/ics/: 原神.ics  崩坏：星穹铁道.ics  绝区零.ics
source/: genshin.txt  sr.txt  zzz.txt  原神.txt  星铁.txt  绝区零.txt
src/: App.vue  main.ts
src/core/: __init__.py  factory.py  manager.py
src/crawler/: base_crawler.py  genshin_crawler.py
src/data/: data.json
src/exporter/: base_exporter.py  ics_exporter.py  json_exporter.py
src/models/: __init__.py  calendar.py  notice.py
utils/: copyText.ts  useDarkTheme.ts  useData.ts
(+37 files in other folders)
