[project]
name = "hoyo-calendar"
version = "0.1.0"
description = "自动同步《原神》《星穹铁道》《绝区零》的官方活动日程到您的日历应用"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "apscheduler>=3.11.1",
    "httpx>=0.28.1",
    "icalendar>=6.3.2",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pydantic>=2.12.4",
    "pytz>=2025.2",
]
